# fakedatagen

./: .gitignore  README.md  TODO.md  main_df.py  main_json.py  main_template.py  metadata.json  metadata_simple.json  metadata_template.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
lib/: configuration.py  errors.py  fake_data_builder.py
lib/builders/: dataframe.py  json.py  str_template.py
samples/: main_df.py  main_json.py  main_strtemplate.py
samples/data/: metadata.json  metadata_json.json  metadata_template.json
src/: faker_ex.py
src/fake_data_builder/: fake_data_builder.py
src/fake_data_builder/builders/: __init__.py  dataframe.py  json.py  str_template.py
src/providers/: ontology_provider.py
src/tests/: commons.py  fake_data_builder_dataframe_test.py  fake_data_builder_json_test.py  fake_data_builder_str_template_test.py  fake_data_builder_test.py  metadata_builder.py
tests/: fake_data_builder_dataframe_test.py  fake_data_builder_json_test.py  fake_data_builder_str_template_test.py  fake_data_builder_test.py  metadata_builder.py
