[project]
name = "denz-seah-fake-data-builder"
version = "0.0.1"
description = "Generating data with Faker"
authors = [
    {name = "Dennis Seah", email = "dennis.seah@gmail.com"},
]
dependencies = ["pandas==1.3.3", "faker==8.14.0"]
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = "MIT"}

[tool.pdm.dev-dependencies]  # This is dev dependencies
dev1 = ["black==21.9b0"]
dev2 = ["build==0.7.0"]
dev3 = ["pytest-cov==3.0.0"]
dev4 = ["pytest==6.2.5"]

[project.urls]
homepage = "https://github.com/dennisseah/fakedatagen"

[tool]
[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true
